--- a/index.html
+++ b/index.html
@@ -5,14 +5,10 @@
     <link href='https://fonts.googleapis.com/css?family=Titillium+Web:600' rel='stylesheet' type='text/css'>
     <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
   </head>
-
   <body>
-    <div id="container">
+    <main class="container">
       <h1>Todo List</h1>
       <div id="app">
-        <form id='add-form'>
-          <input id="create" name="itemDescription" type="text" placeholder="Add something to the list!">
-        </form>
         <ul id='list'>
 <!--
           <li class='item' data-id="1">
@@ -37,7 +33,11 @@
         <span class="delete-button">&#10008;</span>
       </li>
     </div>
-
+    <footer>
+      <form id='add-form' class="container">
+        <input id="create" name="itemDescription" type="text" placeholder="Add something to the list!">
+      </form>
+    </footer>
     <script src="app.js"></script>
   </body>
 </html>
