added updated time display

--- a/index.html
+++ b/index.html
@@ -26,14 +26,11 @@
         </ul>
       </div>
     </main>
-
-    <article id='templates'>
-      <li class='item' data-id="some id">
-        <span class='complete-button'>&#10004;</span>
-        <div class="description">A stick of butter</div>
-        <span class="delete-button">&#10008;</span>
-      </li>
+<!--
+    <article class="tooltip">
+        <input type="text">
     </article>
+-->
     <footer>
       <form id='add-form' class="container">
         <span class="createIcon">&#9998;</span>
